# multimodal-agent-t2i

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
docs/: PROJECT_MASTER_PLAN.md  architecture.md  data_flow.md  error_cases.md  experiment_plan.md
scripts/: export_latex_table.py  run_ablation.sh  run_demo.sh  run_eval.sh
src/: main.py
src/agents/: ambiguity_detector.py  planner.py  refiner.py
src/api/: app.py
src/evaluators/: aesthetic_eval.py  constraint_eval.py  reference_eval.py  semantic_eval.py
src/memory/: prompt_trace.py  session_store.py
src/models/: flux_backend.py  generator_service.py  sdxl_backend.py  t2i_base.py
src/schemas/: evaluation.py  generation.py  intent.py  prompt.py
src/utils/: image_ops.py  logging.py
tests/: test_generator.py
